@@ -57,6 +57,7 @@ Template for new versions:
 - `sort`: search and sort for the "choose unit to elevate to the barony" screen. units are sorted by the number of item preferences they have and the units are annotated with the items that they have preferences for
 
 ## Fixes
+- `sort`: fix potential crash when removing jobs directly from the Tasks info screen
 
 ## Misc Improvements
 - wherever units are listed in DFHack tools, properties like "agitated" or (-trained-) are now shown
